remove preview detection